ref #2 Active_Admin Bug修正中

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,6 +4,9 @@ ja:
     models:
       admin_user: 管理者
       cosmetic: コスメ
+      user: ユーザー
+      news: お知らせ
+      blog: ビューティコラム
     attributes:
       admin_user:
         email: 管理者メール
