--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -15,6 +15,8 @@ ja:
         product_name: 商品名
         image: イメージ
         desc: 説明
+        rating: 星
+        count: 販売数
         company_name: メーカー
         price: 販売価格
         is_open: 公開の有無
